# ralph-orchestrator

./: .gitignore  PROMPT.md  README.md  pyproject.toml
.agent/: scratchpad.md
.sop/planning/implementation/: plan.md
docs/: changelog.md  index.md  quick-start.md
docs/api/: cli.md
docs/guide/: configuration.md
src/ralph_orchestrator/: __init__.py  __main__.py  async_logger.py  context.py  error_formatter.py  logging_config.py  main.py  metrics.py  orchestrator.py  output.py  verbose_logger.py
src/ralph_orchestrator/adapters/: __init__.py  acp.py  acp_client.py  acp_handlers.py  claude.py  qchat.py
tests/: test_acp_adapter.py  test_acp_client.py  test_acp_handlers.py  test_acp_integration.py  test_acp_orchestrator.py  test_async_logger.py  test_config.py  test_context.py  test_error_formatter.py  test_orchestrator.py  test_output.py  test_verbose_logger.py
