[project]
name = "ralph-orchestrator"
version = "0.1.0"
description = "Simple yet powerful AI agent orchestration using the Ralph Wiggum technique"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.10",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.19",
    "mkdocs-material-extensions>=1.3.1",
    "psutil>=7.0.0",
    "pymdown-extensions>=10.16.1",
    "pytest>=8.4.2",
    "typing-extensions>=4.0.0",
    "pyyaml>=6.0.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
    "aiofiles>=24.1.0",
    "sqlalchemy>=2.0.43",
    "pyjwt>=2.10.1",
    "passlib>=1.7.4",
    "bcrypt>=4.0.0,<5.0.0",
    "python-multipart>=0.0.20",
    "rich>=13.0.0",
]

[project.scripts]
ralph = "ralph_orchestrator.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.12",
]
